unpackaged/main/default/objects/ZP_Employee__c/ZP_Employee__c.object-meta.xml
<CustomObject>
    <label>ZP Employee</label>
    <nameField>
        <displayFormat>ZPE-{000000000}</displayFormat>
        <label>ZP Employee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ZP Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>