unpackaged/main/default/objects/ZP_Employee__c/fields/Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status__c</fullName>
    <label>Employment Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>