unpackaged/main/default/objects/ZP_Employee__c/fields/Federal_Withholding_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Federal_Withholding_Allowance__c</fullName>
    <label>Federal Withholding Allowance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>