unpackaged/main/default/objects/ZP_Employee__c/fields/Work_State__c.field-meta.xml
<CustomField>
    <fullName>Work_State__c</fullName>
    <label>Work State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>